--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 Puzzle Template
 http://www.templatemo.com/tm-477-puzzle
 -->
-    <title>Puzzle by templatemo</title>
+    <title>1992 Media</title>
 </head>
 
 <body>
@@ -45,7 +45,7 @@ http://www.templatemo.com/tm-477-puzzle
 
        <section class="col-md-12 content padding" id="services">
         <div class="col-lg-6 col-md-6 col-md-push-6 content-item">
-           <img src="images/2.jpg" alt="Image" width="4019" class="tm-image img-responsive img-rounded">
+           <img src= https://github.com/dwBH/1992/raw/master/images/2.JPG alt="Image" width="4019" class="tm-image img-responsive img-rounded">
        </div>
 </section>
 
