--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@ http://www.templatemo.com/tm-477-puzzle
 
    <section class="col-md-12 content" id="clients">
        <div class="col-lg-6 col-md-6 content-item">
-           <img src="images/3.jpg" alt="Image" class="tm-image">
+           <img src= https://github.com/dwBH/1992/raw/master/images/3.JPG alt="Image" class="tm-image">
        </div>
 </section>
 
 
    <section class="col-md-12 content" id="contact">
        <div class="col-lg-6 col-md-6 col-md-push-6 content-item">
-           <img src="images/4.jpg" alt="Image" class="tm-image">
+           <img src= https://github.com/dwBH/1992/raw/master/images/4.JPG alt="Image" class="tm-image">
        </div>
 </section>
 </div>
