--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@ http://www.templatemo.com/tm-477-puzzle
             <nav class="main-menu">
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li><a href="mailto:david@1992.media">Contact</a></li>
+                    <a href="mailto:david@1992.media">Contact</a>
                 </ul>
             </nav>
         </div>
