--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@ http://www.templatemo.com/tm-477-puzzle
     
     <div class="container">
         <section class="col-md-12 content" id="home">
-          <!---
-			<div class="col-md-6 content-item col-lg-12">
-				<script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/bde345de37a357e495240a0b68b08ccf.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
-           </div> -->
+		<div class="col-md-6 content-item col-lg-12">
+			<script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/bde345de37a357e495240a0b68b08ccf.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+          	 </div>
 </section>
 
        <section class="col-md-12 content padding" id="services">
