--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@ http://www.templatemo.com/tm-477-puzzle
                     <span class="icon-bar"></span>                        
                 </button>
               <a class="navbar-brand" href="#">1992</a></div>
-            <!-- nav class="main-menu">
-                    <a href="mailto:david@1992.media">Contact</a -->
-            </nav>
+          
+		<!-- nav class="main-menu">
+                    <a href="mailto:david@1992.media">Contact</a>
+            </nav-->
+		
         </div>
     </div>
     
