--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/templatemo-style.css">
-<!--
-Puzzle Template
-http://www.templatemo.com/tm-477-puzzle
--->
+	
     <title>1992 Media</title>
 </head>
 
@@ -32,7 +29,6 @@ http://www.templatemo.com/tm-477-puzzle
     </div>
     
     <div class="container">
-        <section class="col-md-12 content" id="home">
 		<div class="col-md-6 content-item col-lg-12">
 			<script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/bde345de37a357e495240a0b68b08ccf.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
 
@@ -54,12 +50,12 @@ function checkScrollPosition() {
 }
 
 $(document).ready(function () {   
-    // Single page nav
-    $('.fixed-header').singlePageNav({
+    <!-- // Single page nav
+     $('.fixed-header').singlePageNav({
         offset: 59,
         filter: ':not(.external)',
         updateHash: true        
-    });
+    }); 
 
     checkScrollPosition();
 
