--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/templatemo-style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> 
+    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.png"> 
     <title>1992 Media</title>
 </head>
 
