--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <div class="navbar-header">
               <a class="navbar-brand" href="#">1992</a></div>
           
-		<nav class="main-menu">
+	<nav class="main-menu">
                     <a href="mailto:david@1992.media">Contact</a>
-            </nav-->
+         </nav>
 		
         </div>
     </div>
