--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a class="navbar-brand" href="#">1992</a></div>
           
 	<nav class="main-menu">
-                    <a href="mailto:david@1992.media">Contact</a>
+                    <a href="mailto:david@1992.media?Subject=Hello!">Contact</a>
          </nav>
 		
         </div>
