--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <div class="navbar-header">
               <a class="navbar-brand" href="#">1992</a></div>
           
-	<nav class="main-menu">
-                       <a href = "mailto:david@1992.media?subject = Hi!&">
-		Contact
+	<!-- nav class="main-menu">
+                       <a href = "mailto:david@1992.media?subject = Hi!">
+			Contact
 			</a>
-         </nav>
+         </nav -->
 		
         </div>
     </div>
