--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 </head>
 
 <body>
-    <div class="fixed-header">
+    <div class="header" id="myHeader">
+  <h2>1992</h2> 
+    </div>
+	
+	<!-- div class="fixed-header">
         <div class="container">
             <div class="navbar-header">
               <a class="navbar-brand" href="#">1992</a></div>
@@ -29,10 +33,11 @@
                        <a href = "mailto:david@1992.media?subject = Hi!">
 			Contact
 			</a>
-         </nav -->
+         </nav >
 		
-        </div>
-    </div>
+        </div >
+
+    </div -->
     
     <div class="container">
 		<div class="col-md-6 content-item col-lg-12">
