--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="navbar-header">
               <a class="navbar-brand" href="#">1992</a></div>
           
-	<!-- nav class="main-menu">
+	<nav class="main-menu">
                        <a href = "mailto:david@1992.media?subject = Hi!">
 			Contact
 			</a>
