--- a/index.html
+++ b/index.html
@@ -50,6 +50,26 @@
 <script src="js/jquery.singlePageNav.min.js"></script>
 
 <script>
+// When the user scrolls the page, execute myFunction 
+window.onscroll = function() {myFunction()};
+
+// Get the header
+var header = document.getElementById("myHeader");
+
+// Get the offset position of the navbar
+var sticky = header.offsetTop;
+
+// Add the sticky class to the header when you reach its scroll position. Remove "sticky" when you leave the scroll position
+function myFunction() {
+  if (window.pageYOffset >= sticky) {
+    header.classList.add("sticky");
+  } else {
+    header.classList.remove("sticky");
+  }
+}
+			</script>
+			
+<!-- script>
 
 // Check scroll position and add/remove background to navbar
 function checkScrollPosition() {
@@ -83,6 +103,7 @@ $(document).ready(function () {
 $(window).on("scroll", function() {
     checkScrollPosition();    
 });
-</script>
+</script -->
+		
 </body>
 </html>
