--- a/index.html
+++ b/index.html
@@ -48,26 +48,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.singlePageNav.min.js"></script>
-
-<script>
-// When the user scrolls the page, execute myFunction 
-window.onscroll = function() {myFunction()};
-
-// Get the header
-var header = document.getElementById("myHeader");
-
-// Get the offset position of the navbar
-var sticky = header.offsetTop;
-
-// Add the sticky class to the header when you reach its scroll position. Remove "sticky" when you leave the scroll position
-function myFunction() {
-  if (window.pageYOffset >= sticky) {
-    header.classList.add("sticky");
-  } else {
-    header.classList.remove("sticky");
-  }
-}
-			</script>
+<script src="js/navbar.js"></script>
 			
 <!-- script>
 
@@ -81,7 +62,7 @@ function checkScrollPosition() {
 }
 
 $(document).ready(function () {   
-    <!-- // Single page nav
+    < // Single page nav
      $('.fixed-header').singlePageNav({
         offset: 59,
         filter: ':not(.external)',
