--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ function myFunction() {
 }
 </script>
 
-<script src="js/jquery.min.js"></script>
+<!-- script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.singlePageNav.min.js"></script>
 <script src="js/navbar.js"></script>
