--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body {
 
 <div class="text-center footer"> </div>
 
-<!-- script src="js/jquery.min.js"></script>
+< script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.singlePageNav.min.js"></script>
 <script src="js/navbar.js"></script>
