--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109027080-1"></script>
@@ -10,64 +9,28 @@
 
   gtag('config', 'UA-109027080-1');
 </script>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css">
-<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="css/templatemo-style.css">
-<link rel="shortcut icon" type="image/x-icon" href="/images/favicon.png"> 
-<title>1992 Media</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/templatemo-style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.png"> 
+    <title>1992 Media</title>
 </head>
-<style>
-body {
-  margin: 0;
-  font-family: Arial;
-}
 
-.top-container {
-  background-color: #f1f1f1;
-  padding: 30px;
-  text-align: center;
-}
-
-.header {
-  padding: 10px 16px;
-  background: #006699;
-  color: #f1f1f1;
-}
-
-.content {
-  padding: 16px;
-}
-
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-.sticky + .content {
-  padding-top: 102px;
-}
-</style>
-</head>
 <body>
-	
-	<!-- div class="fixed-header">
+    <div class="fixed-header">
         <div class="container">
             <div class="navbar-header">
               <a class="navbar-brand" href="#">1992</a></div>
           
-	<nav class="main-menu">
-                       <a href = "mailto:david@1992.media?subject = Hi!">
-			Contact
-			</a>
-         </nav >
+		<!-- nav class="main-menu">
+                    <a href="mailto:david@1992.media">Contact</a>
+            </nav-->
 		
-        </div >
-
-    </div -->
+        </div>
+    </div>
     
     <div class="container">
 		<div class="col-md-6 content-item col-lg-12">
@@ -75,12 +38,11 @@ body {
 
 <div class="text-center footer"> </div>
 
-< script src="js/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.singlePageNav.min.js"></script>
-<script src="js/navbar.js"></script>
-			
-<!-- script>
+
+<script>
 
 // Check scroll position and add/remove background to navbar
 function checkScrollPosition() {
@@ -92,7 +54,7 @@ function checkScrollPosition() {
 }
 
 $(document).ready(function () {   
-    < // Single page nav
+    <!-- // Single page nav
      $('.fixed-header').singlePageNav({
         offset: 59,
         filter: ':not(.external)',
@@ -114,7 +76,6 @@ $(document).ready(function () {
 $(window).on("scroll", function() {
     checkScrollPosition();    
 });
-</script -->
-		
+</script>
 </body>
 </html>
